<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/purple_500"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/question_number"
        android:text="@string/questions"
        android:textColor="#ffa384"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginTop="20dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_option"
            android:visibility="gone"
            android:id="@+id/select_option"
            android:textAlignment="center"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/correct_answer"
            android:textColor="@color/white"
            android:visibility="gone"
            android:textAlignment="center"
            android:text="@string/correct_answer"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:layout_marginBottom="60dp"
        android:layout_marginTop="70dp"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/question"
            android:text="@string/question1"
            android:textColor="@color/white"
            android:textSize="20sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/secondTwo_option"
        android:gravity="center"
        android:paddingRight="50dp"
        android:paddingLeft="50dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/option_A"
            android:text="@string/question1_A"
            android:textAlignment="center"
            android:textColor="@color/purple_500"
            android:background="@drawable/optiondesign"
            android:paddingTop="15dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/option_B"
            android:background="@drawable/optiondesign"
            android:text="@string/question1_B"
            android:textAlignment="center"
            android:textColor="@color/purple_500"
            android:layout_marginTop="10dp"
            android:paddingTop="15dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/firstTwo_option"
        android:gravity="center"
        android:layout_marginBottom="30dp"
        android:paddingRight="50dp"
        android:paddingLeft="50dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/option_C"
            android:background="@drawable/optiondesign"
            android:text="@string/question1_C"
            android:textAlignment="center"
            android:textColor="@color/purple_500"
            android:layout_marginTop="10dp"
            android:paddingTop="15dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/option_D"
            android:background="@drawable/optiondesign"
            android:text="@string/question1_D"
            android:textAlignment="center"
            android:textColor="@color/purple_500"
            android:layout_marginTop="10dp"
            android:paddingTop="15dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/score"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/score"
            android:padding="10dp"
            android:layout_gravity="center"/>

        <ProgressBar
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_gravity="bottom"
            android:id="@+id/progress_bar"
            style="@android:style/Widget.Material.ProgressBar.Horizontal"
            android:indeterminate="false"/>
    </LinearLayout>



</LinearLayout>